# Non-IntersectingChessLayout

./: README.md  source.py  source.spec
ChessLayoutEngine/: CMakeLists.txt  c_cpp_properties.json  launch.json  tasks.json
ChessLayoutEngine/boards/: BoardImageFactory.cpp  BoardImageFactory.h  Chessboard.h
ChessLayoutEngine/engine/: Engine.cpp  Engine.h  EnumLayouts.h  EnumType.h  LayoutsFactory.cpp  LayoutsFactory.h  PieceMovements.cpp  Point2D.h
ChessLayoutEngine/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Piece.h  Pieces.h  Queen.cpp
Zavrsni/: ChessCombinationEngine.sln
Zavrsni/Debug/: Project1.ilk  Start.py  ZavrsniLogika.ilk
Zavrsni/Project1/: Board.h  BoardEngine.h  BoardFunctions.cpp  BoardFunctions.h  BoardImageFactory.cpp  BoardImageFactory.h  Chessboard.cpp  Chessboard.h  ChessboardMenu.cpp  ChessboardMenu.h  Constants.h  Engine.cpp  Engine.h  EnumBoard.h  EnumCombinations.h  EnumFunctions.h  EnumLayout.h  EnumLayouts.h  EnumType.h  IPiece.h  LayoutsFactory.cpp  LayoutsFactory.h  MathFunctions.h  Piece.cpp  Piece.h  PieceFunctions.cpp  PieceFunctions.h  Pieces.h  Point2D.h  Project1.vcxproj  Project1.vcxproj.filters  Rook.cpp  main.cpp  source.cpp  testcpp.cpp
Zavrsni/Project1/Debug/: Project1.exe.recipe  vc142.idb
Zavrsni/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ui/: ui.py
